# app/api/logs.go
@@ -4,8 +4,8 @@ import (
 	"github.com/gogf/gf/frame/g"
 	"github.com/gogf/gf/net/ghttp"
 	"github.com/gogf/gf/util/gconv"
-	"wizz-home-page/app/dao"
 	"wizz-home-page/app/model"
+	"wizz-home-page/app/service"
 	"wizz-home-page/library/response"
 )
 
@@ -17,22 +17,26 @@ type logsApi struct{}
 // @Tags 日志
 // @Accept  json
 // @Produce  json
+// @Param   pageSize	query	int true  "一页几条"
+// @Param   pageIndex	query	int true  "页数"
 // @Success 200 {array} model.LogsApiRep
 // @Router /api/logs [get]
 func (*logsApi) ReadAll(r *ghttp.Request) {
-	g.Log().Debug("GetAll")
-	var logs []model.Logs
-	if err := dao.Logs.Structs(&logs); err != nil {
-		response.JsonOld(r, 500, "")
-	}
-	if len(logs) == 0 {
-		r.Response.Write("[]")
-		r.Exit()
+	pageSize := r.GetInt("pageSize")
+	pageIndex := r.GetInt("pageIndex")
+	responsePage, err := service.SortLogs(pageIndex, pageSize)
+
+	if err != nil {
+		response.JsonOld(r, 500, err)
 	} else {
-		var logsRsp []model.LogsApiRep
-		if err := gconv.Structs(logs, &logsRsp); err != nil {
+		var logRsp []model.LogsApiRep
+		if err = gconv.Structs(responsePage.Content, &logRsp); err != nil {
 			g.Log().Line().Error(err)
+			response.JsonOld(r, 500, err)
+		} else {
+			responsePage.Content = logRsp
+			response.JsonOld(r, 200, responsePage)
 		}
-		response.JsonOld(r, 200, logsRsp)
+
 	}
 }
